Fix bullet alignment.

--- a/Scripts/engine/css/style.css
+++ b/Scripts/engine/css/style.css
@@ -220,7 +220,7 @@
 .bulletStyle {
 	background-image: url(../../../Media/eng/images/Untitled.jpg);
 	background-repeat: no-repeat;
-	background-position: 0 50%;
+	background-position: 0 5px;
 	padding: 3px 0 3px 40px;
 	margin: .4em 0;
 }
